Fix the mobile side nav's logo not showing icon

--- a/src/targets/sandman/styles/views/header.less
+++ b/src/targets/sandman/styles/views/header.less
@@ -33,9 +33,6 @@
   .main-nav {
 
     .brand {
-      .dekstop-logo {
-        width: 100%;
-      }
       .viewport-mobile &{
         top: 22px;
         max-width:195px;
@@ -56,7 +53,6 @@
         }
       }
       .chain-sand & {
-        width:200px;
         overflow:hidden;
       }
       .property-zkam & {
